--- a/css/stylies.css
+++ b/css/stylies.css
@@ -1,12 +1,20 @@
+
 .card{
     border-radius: 32px;
 }
 
+.card-text{
+    margin: auto;
+}
+#box-image-profile{
+    height: 6rem;
+}
 #image-profile{
     border-radius: 100%;
     height: 10rem;
     bottom: 5rem;
     position: relative;
+    margin: auto;
 }
 .card-img-top{
     border-radius: 32px 32px 0px 0px;
@@ -14,16 +22,14 @@
 
 .boton-i{
     float: right;
-    bottom: 1rem;
     position: relative;
     border-radius: 100%;
     border-style: none;
     margin: 0px;
+    height: 1rem;
+    bottom: 1rem;
 }
-.title-bar{
-    display: flex;
-    justify-content: center;
-}
+
 ul{
     list-style: none;
 }
