--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,23 +1,5 @@
-
 .card{
     border-radius: 32px;
-}
-
-.card-text{
-    margin: auto;
-}
-#box-image-profile{
-    height: 6rem;
-}
-#image-profile{
-    border-radius: 100%;
-    height: 10rem;
-    bottom: 5rem;
-    position: relative;
-    margin: auto;
-}
-.card-img-top{
-    border-radius: 32px 32px 0px 0px;
 }
 
 .boton-i{
@@ -29,6 +11,7 @@
     height: 1rem;
     bottom: 1rem;
 }
+
 .title-bar{
     display: flex;
     align-items: center;
@@ -38,4 +21,12 @@
 
 ul{
     list-style: none;
+}
+
+.bi-plus-circle-fill{
+    vertical-align: -1em;
+}
+
+.bi-pencil-fill, .bi-trash-fill{
+    vertical-align: -0.35em;
 }
