se corrigio la desaparicion de iconos en pantalla pequeñas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,9 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand navbar-dark bg-success">
         <div class="container-fluid">
         <button  class="btn"><img src="../../../assets/images/APLogo-20-20.png" width="100px" alt=""></button> 
-        <a class="navbar-brand" href="#">
-            Mercado Daniel
-            </a>
+        <a class="navbar-brand" href="#"></a>
         <a class="navbar-brand" href="#"><button class="boton-i btn nav-item"><img src="" alt=""></button></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
